metadata/root/main/default/objects/SBQQ__Quote__c/fields/Picklist_Quote_AL__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Quote_AL__c</fullName>
    <description>any here</description>
    <label>Picklist Quote AL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>