metadata/root/main/default/objects/SBQQ__Quote__c/fields/RollAL2__c.field-meta.xml
<CustomField>
    <fullName>RollAL2__c</fullName>
    <label>RollAL2</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__GrossProfit__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>