metadata/root/main/default/objects/SBQQ__Quote__c/fields/RollAL__c.field-meta.xml
<CustomField>
    <fullName>RollAL__c</fullName>
    <label>RollAL</label>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>